Add sorting algorithms: Count Sort, Quick Sort (Hoare and Lomuto), Recursive Bubble Sort, Recursive Insertion Sort, and Recursive Selection Sort implementations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,9 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "forward_list": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "Hoare",
+        "Lomuto"
+    ]
 }
