Add implementation for Automorphic number check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,9 +46,11 @@
         "xlocnum": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "forward_list": "cpp"
+        "forward_list": "cpp",
+        "ratio": "cpp"
     },
     "cSpell.words": [
+        "Automorphic",
         "Hoare",
         "Lomuto"
     ],
